fix: scrollbar wasn't visible on second page

--- a/src/renderer/src/components/repository-workspace/RepositoryWorkspace/RepositoryWorkspace.css
+++ b/src/renderer/src/components/repository-workspace/RepositoryWorkspace/RepositoryWorkspace.css
@@ -57,6 +57,7 @@
 .tab-group .tab-panels {
   display: flex;
   overflow: hidden;
+  flex-grow: 1;
 }
 
 .tab-group [id^="headlessui-tabs-panel"] {
